<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StatsFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/plus"
        android:visibility="invisible"
        app:backgroundTint="@color/gray_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/btn_datepicker_start"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/gray"
        android:scaleType="fitXY"
        android:src="@drawable/calendar_lines_pen"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_list2"
        app:layout_constraintStart_toEndOf="@+id/tv_date_list2"
        app:layout_constraintTop_toTopOf="@+id/tv_date_list2" />

    <ImageButton
        android:id="@+id/btn_datepicker_end"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/gray"
        android:scaleType="fitXY"
        android:src="@drawable/calendar_lines_pen"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_list2"
        app:layout_constraintStart_toEndOf="@+id/tv_date_list3"
        app:layout_constraintTop_toTopOf="@+id/tv_date_list2" />

    <TextView
        android:id="@+id/tv_date_list2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_date_list3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:text="24/01/04" />

    <TextView
        android:id="@+id/tv_date_list3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_list2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_date_list2"
        app:layout_constraintTop_toTopOf="@+id/tv_date_list2"
        tools:text="24/01/04" />

    <TextView
        android:id="@+id/tv_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_fat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_list2"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_saturated_fat"
        app:layout_constraintEnd_toEndOf="@+id/tv_calories"
        app:layout_constraintStart_toStartOf="@+id/tv_calories"
        app:layout_constraintTop_toBottomOf="@+id/tv_calories"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_saturated_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_cholesterol"
        app:layout_constraintEnd_toEndOf="@+id/tv_fat"
        app:layout_constraintStart_toStartOf="@+id/tv_fat"
        app:layout_constraintTop_toBottomOf="@+id/tv_fat"
        tools:text="150 calories" />


    <TextView
        android:id="@+id/tv_cholesterol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_sodium"
        app:layout_constraintEnd_toEndOf="@+id/tv_saturated_fat"
        app:layout_constraintStart_toStartOf="@+id/tv_saturated_fat"
        app:layout_constraintTop_toBottomOf="@+id/tv_saturated_fat"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_sodium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_carbohydrates"
        app:layout_constraintEnd_toEndOf="@+id/tv_cholesterol"
        app:layout_constraintStart_toStartOf="@+id/tv_cholesterol"
        app:layout_constraintTop_toBottomOf="@+id/tv_cholesterol"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_carbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_fiber"
        app:layout_constraintEnd_toEndOf="@+id/tv_sodium"
        app:layout_constraintStart_toStartOf="@+id/tv_sodium"
        app:layout_constraintTop_toBottomOf="@+id/tv_sodium"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_fiber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_sugar"
        app:layout_constraintEnd_toEndOf="@+id/tv_carbohydrates"
        app:layout_constraintStart_toStartOf="@+id/tv_carbohydrates"
        app:layout_constraintTop_toBottomOf="@+id/tv_carbohydrates"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_protein"
        app:layout_constraintEnd_toEndOf="@+id/tv_fiber"
        app:layout_constraintStart_toStartOf="@+id/tv_fiber"
        app:layout_constraintTop_toBottomOf="@+id/tv_fiber"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_potassium"
        app:layout_constraintEnd_toEndOf="@+id/tv_sugar"
        app:layout_constraintStart_toStartOf="@+id/tv_sugar"
        app:layout_constraintTop_toBottomOf="@+id/tv_sugar"
        tools:text="150 calories" />

    <TextView
        android:id="@+id/tv_potassium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_protein"
        app:layout_constraintStart_toStartOf="@+id/tv_protein"
        app:layout_constraintTop_toBottomOf="@+id/tv_protein"
        tools:text="150 calories" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/today"
        android:textColor="@color/dark_purple"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/month"
        android:textColor="@color/dark_purple"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/gray_light"
        android:text="@string/year"
        android:textColor="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>